# mcp-agent-gateway

./: .dockerignore  .env.example  .gitignore  COVERAGE.md  Justfile  LICENSE  README.md  docker-compose.dnsfix.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.test.yml  justfile  pyproject.toml  test-api.sh
.github/workflows/: ci.yml
app/: auth.py  client_metadata.py  client_registry.py  config.py  dcr.py  logging.py  main.py  middlewares.py
app/api/: usage_router.py  webhooks_router.py
app/authorization/: pkce.py  router.py
app/gateway/: context.py  job_worker.py  jobs.py  mcp.py  server.py  usage.py  usage_router.py  webhooks_router.py
app/google/: oauth.py
app/identity/: jwks_client.py  protected_resource.py  token_validator.py
app/integrations/: base.py
app/mcp/: app.py  event_store.py  server.py
app/middleware/: access_guard.py  origin_guard.py  request_logger.py
app/routers/: auth.py  google.py  mcp.py  oauth.py
app/shared/: context.py  dependencies.py  exceptions.py  http_client.py  redis.py  store.py  usage.py
tests/: conftest.py  test_auth.py  test_client_metadata.py  test_client_registry.py  test_config.py  test_dcr.py  test_google_oauth.py  test_health.py  test_mcp.py  test_oauth_router.py
tests/api/: test_usage_router.py  test_usage_wiring.py  test_webhooks_router.py
tests/authorization/: test_pkce.py  test_router.py
tests/gateway/: test_access_guard.py  test_job_wiring.py  test_job_worker.py  test_jobs.py  test_rate_limiter_integration.py  test_server.py  test_usage.py  test_usage_wiring.py
(+74 files in other folders)
