[project]
name = "mcp_agent_gateway"
version = "0.1.0"
description = "Secure MCP gateway giving AI agents audited, least-privilege access to Google Drive and Slack over OAuth 2.1"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.7.2",
    "cryptography>=48.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "mcp>=1.0",
    "opentelemetry-distro>=0.62b0",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.12.1",
    "python-json-logger>=3.2.0",
    "redis[hiredis]>=7.4.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26.0",
    "httpx>=0.27.0",
    "lupa>=2.8",  # fakeredis Lua scripting (test-only; real Redis runs Lua server-side)
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
